--- a/com.ms.timezone/Jenkinsfile
+++ b/com.ms.timezone/Jenkinsfile
@@ -4,7 +4,7 @@ node {
    def tomcatBin = 'C:\\apache-tomcat\\bin'
   
   stage('SCM CheckOut') {
-    git 'https://github.com/ManuelKumar/timezome.git'
+    git 'https://github.com/ManuelKumar/timezome'
   }
   
   stage('Build Stage') {
